es lint working

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "crowd-funding",
+  "name": "off-road-unstucker",
   "version": "1.0.0",
-  "description": "",
+  "description": "Offroad Rescue",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "seed": "node seeds/seed.js"
+    "lint": "eslint \"**/*.js\"",
+    "test": "npm run lint"
   },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
