--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,7 @@
     "browser": true,
     "commonjs": true,
     "node": true,
-    "es6": true,
-    "es2017": true,
-    "es2018": true
+    "es6": true
   },
   "rules": {
     "no-undef-init": "error",
@@ -34,5 +32,8 @@
     "semi": ["error", "always"],
     "radix": "off"
   },
-  "extends": ["prettier"]
+  "extends": ["prettier"],
+  "parserOptions": {
+    "ecmaVersion": "latest"
+  }
 }
