--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "eslint \"**/*.js\"",
     "test": "npm run lint"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -25,6 +24,7 @@
   "devDependencies": {
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
+    "nodemon": "^3.0.3",
     "prettier": "^2.1.2"
   }
 }
